--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '3.8'
 
+# docker-compose up --build
+# docker-compose up down
+# docker-compose up -d
+
 services:
   frontend:
     build:
