--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,53 +1,85 @@
 # docker-compose up --build
 # docker-compose up down
 # docker-compose up -d
+
 services:
+  # NGINX
+  nginx:
+    image: nginx:alpine
+    container_name: cinema-nginx-proxy
+    restart: unless-stopped
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - frontend
+      - backend
+    networks:
+      - cinema-network
+
+  # FRONTEND
   frontend:
     build:
-      context: ./frontend 
+      context: ./frontend
       dockerfile: Dockerfile
-    container_name: cinema-frontend
-    ports:
-      # http://localhost:5174
-      - "5174:80"
+    container_name: cinema-frontend-dev
+    restart: unless-stopped
     volumes:
-      - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./frontend:/app
+      - /app/node_modules
+    networks:
+      - cinema-network
+
+  # BACKEND
   backend:
     build:
-      context: ./backend 
-      dockerfile: Dockerfile 
+      context: ./backend
+      dockerfile: Dockerfile
     container_name: cinema-backend
-    command: npm run start:dev
+    restart: unless-stopped
+    depends_on:
+      - db
     ports:
       - "3000:3000" 
-    volumes:
-      - ./backend:/usr/src/app 
-      - /usr/src/app/node_modules 
-    depends_on:
-      - db 
     environment:
-
       DATABASE_URL: "postgresql://user:password@db:5432/cinema_db?schema=public"
+    volumes:
+      - ./backend:/usr/src/app
+      - /usr/src/app/node_modules
+    networks:
+      - cinema-network
 
+  # BANCO DE DADOS
   db:
-    image: postgres:15 
+    image: postgres:15-alpine
     container_name: cinema-db
+    restart: unless-stopped
     environment:
+      POSTGRES_DB: cinema_db
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
-      POSTGRES_DB: cinema_db
-    ports:
-      - "5432:5432" 
     volumes:
-      - postgres_data:/var/lib/postgresql/data 
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - cinema-network
 
+  # ADMINER
   adminer:
     image: adminer
     container_name: cinema-adminer
-    ports:
-      - "8080:8080" # http://localhost:8080
+    restart: unless-stopped
     depends_on:
       - db
+    ports:
+      - "8080:8080"
+    networks:
+      - cinema-network
+
+# Definição da rede compartilhada e do volume do banco
+networks:
+  cinema-network:
+    driver: bridge
 
 volumes:
   postgres_data:
